--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -4,4 +4,43 @@
   margin: 0;
 }
 
-/* Start coding here */
+:root {
+
+  /*Color Variables*/
+  --Branding-Color: #ff7f50;
+  --Secondary-Color: cornsilk;
+  --Highlight-Color: 	#d2691e;
+  --Muted-Color: #a9a9a9;
+  
+  /*Margin Level*/
+  --margin-level-1: 1px;
+  --margin-level-2: 5px;
+  --margin-level-3: 10px;
+  --margin-level-4: 15px;
+  --margin-level-5: 20px;
+
+  /*Padding Level*/
+  --padding-level-1: 1px;
+  --padding-level-2: 5px;
+  --padding-level-3: 10px;
+  --padding-level-4: 15px;
+  --padding-level-5: 20px;
+
+  /*Font Size Variables*/
+  --size-small: 12px;
+  --size-medium: 16px;
+  --size-large: 20px;
+  --size-extra-large: 30px;
+  --size-double-extra-large: 50px;
+  --size-triple-extra-large: 100px;
+}
+
+.introduction {
+  background-color: var(--Secondary-Color);
+  padding: var(--padding-level-5);
+}
+
+h1 {
+  color: var(--Branding-Color);
+  font-size: var(--size-triple-extra-large);
+}
